# secrets-spotter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  ci-validation-scratch.md  justfile  package-lock.json  package.json  release-please-config.json  vitest.config.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  detection_report.yml  feature.yml
.github/scripts/: perf-diff.sh
.github/workflows/: audit.yml  ci.yml  fuzz.yml  perf.yml  release-please.yml  release.yml  scorecard.yml  security.yml  stale.yml  verify.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs  scan.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/benches/: scan.rs
crates/core/benches/corpus/webapp/: attributes.json
crates/core/src/: attributes.rs  cookies.rs  detector.rs  filter.rs  lib.rs  pattern_tests.rs  patterns.rs  test_fixtures.rs  types.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
extension/: manifest.json
extension/background/: service-worker.js
extension/content/: content.css  content.js  interceptor.js
extension/popup/: popup.css  popup.html  popup.js
extension/test/: content.test.js  interceptor.test.js  service-worker.test.js  smoke.test.js
extension/test/helpers/: chrome.js  loadScript.js  loadServiceWorker.js
extension/test/mocks/: wasm-glue.js
fuzz/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  scan_text.dict
fuzz/fuzz_targets/: format_attributes.rs  merge_findings.rs  parse_cookies.rs  scan_text.rs  should_scan.rs
fuzz/seeds/format_attributes/: pairs.json
fuzz/seeds/merge_findings/: truncated.json  valid.json
fuzz/seeds/parse_cookies/: cookies.txt  flags.txt
fuzz/seeds/scan_text/: api-response.json  app.js  dom.html  i18n-dom.html
fuzz/seeds/should_scan/: data-uri  html  json
rust-core/: Cargo.toml
rust-core/src/: attributes.rs  cookies.rs  detector.rs  lib.rs  patterns.rs  types.rs
scripts/: build.sh  clean.sh
