[workspace]
members = ["crates/core", "crates/cli", "crates/wasm"]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
# MSRV contract for `cargo install` users — gated by verify.yml's msrv job.
# 1.87 is the max rust-version declared in the locked dependency graph
# (wit-bindgen/wasip via the wasm toolchain); Cargo.lock v4 needs >= 1.78.
rust-version = "1.87"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = "s"
lto = true

# Benchmarks measure throughput, so they must reflect speed-optimized code —
# not the size-optimized (`opt-level = "s"`) release profile the WASM build
# ships. `cargo bench` inherits from `release`, so override it explicitly here.
[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
