[workspace]
members = ["crates/core", "crates/cli", "crates/wasm"]
# fuzz/ is its own standalone workspace (nightly + libfuzzer deps) — exclude it
# so the main `cargo check`/`test`/`build` never resolves or compiles it.
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "1.3.0"
edition = "2021"
# MSRV contract for `cargo install` users — gated by verify.yml's msrv job.
# 1.87 is the max rust-version declared in the locked dependency graph
# (wit-bindgen/wasip via the wasm toolchain); Cargo.lock v4 needs >= 1.78.
rust-version = "1.87"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = "s"
lto = true

# The CLI is a throughput tool, but `release` is size-optimized for the WASM
# build it shares (`opt-level = "s"`). wasm-pack can't take a custom profile, so
# the CLI gets its own speed profile instead; `just build-cli` and release.yml
# build with `--profile release-cli` (artifacts land in target/release-cli/).
[profile.release-cli]
inherits = "release"
opt-level = 3
codegen-units = 1

# Benchmarks measure throughput, so they must reflect speed-optimized code —
# not the size-optimized (`opt-level = "s"`) release profile the WASM build
# ships. `cargo bench` inherits from `release`, so override it explicitly here.
[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
