[package]
name = "secrets-spotter-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
regex = "1"
lazy_static = "1.4"
console_error_panic_hook = "0.1"
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
