[package]
name = "secrets-spotter-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core secret detection library for secrets-spotter"

[lib]
crate-type = ["rlib"]

[dependencies]
regex = "1"
lazy_static = "1.4"
memchr = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rstest = "0.24"
criterion = { version = "0.7", default-features = false, features = [
    "cargo_bench_support",
] }

[[bench]]
name = "scan"
harness = false
