[package]
name = "secrets-spotter-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core secret detection library for secrets-spotter"

[lib]
crate-type = ["rlib"]

[features]
# Exposes the deterministic secret-shape assembly helpers (test_fixtures) to
# out-of-crate consumers — currently the fuzz workspace's seed generation.
# Off by default, so cli/wasm and the shipped artifacts never compile it.
fixtures = []

[dependencies]
# default-features off drops the Unicode tables (~300 KB of the shipped wasm).
# Every pattern is ASCII-scoped — (?i-u) case folding, (?-u:\b) boundaries —
# so the tables were dead weight. `just scan-self` is the guard: cargo test
# re-enables default features via dev-dependency feature unification and
# CANNOT catch a pattern that needs them; the CLI/wasm builds can.
regex = { version = "1", default-features = false, features = ["std", "perf"] }
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rstest = "0.24"
criterion = { version = "0.7", default-features = false, features = [
    "cargo_bench_support",
] }

[[bench]]
name = "scan"
harness = false
