[package]
name = "secrets-spotter-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for secrets-spotter"

[lib]
crate-type = ["cdylib"]

[dependencies]
secrets-spotter-core = { path = "../core" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"